--- a/hola/templates/admin_dashboard.html
+++ b/hola/templates/admin_dashboard.html
@@ -10,7 +10,8 @@
 	<div class="bg-white/10 backdrop-blur-lg rounded-xl shadow-2xl p-10 w-full max-w-2xl text-center">
 		<h2 class="text-3xl font-bold text-white mb-6">Panel de Administrador</h2>
 		<div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-			<a href="/admin/upload" class="bg-blue-600 hover:bg-blue-800 text-white font-bold py-4 px-6 rounded-lg shadow transition block">Cargar Documento</a>
+			<a href="/admin/upload" class="bg-blue-600 hover:bg-blue-800 text-white font-bold py-4 px-6 rounded-lg shadow transition block">Cargar un documento</a>
+			<a href="/admin/upload_multiple" class="bg-blue-600 hover:bg-blue-800 text-white font-bold py-4 px-6 rounded-lg shadow transition block">Cargar varios documento</a>
 			<a href="/admin/search" class="bg-purple-600 hover:bg-purple-800 text-white font-bold py-4 px-6 rounded-lg shadow transition block">Buscar Usuario</a>
 			<a href="/admin/search" class="bg-green-600 hover:bg-green-800 text-white font-bold py-4 px-6 rounded-lg shadow transition block">Ver Todos los Usuarios</a>
 		</div>
